# Jugnu

./: .gitignore  README.md  context.md  fix_instructions.md  jugnu_claude_code_instructions_v2.docx  pyproject.toml
.github/workflows/: ci.yml
docs/: BUG_HUNT_CHECKLIST.md  JUGNU_BASELINE.md  SOURCE_AUDIT.md
examples/finance/: run.py  skill.py
examples/news/: run.py  skill.py
examples/real_estate/: run.py  skill.py
examples/sports/: run.py  skill.py
jugnu/: __init__.py  cluster_learner.py  contracts.py  crawler.py  dlq.py  drift_detector.py  profile.py  profile_store.py  profile_updater.py  skill.py
jugnu/ember/: __init__.py  captcha_detect.py  change_detector.py  fetcher.py  (+4 more)
ma_poc/: __init__.py  pyproject.toml  requirements.txt
ma_poc/discovery/: __init__.py  carry_forward.py  change_detector.py  contracts.py  dlq.py  frontier.py  scheduler.py  sitemap.py
ma_poc/docs/: JUGNU_BASELINE.md
ma_poc/fetch/: __init__.py  browser_pool.py  captcha_detect.py  conditional.py  contracts.py  fetcher.py  proxy_pool.py  rate_limiter.py  response_classifier.py  retry_policy.py  robots.py  stealth.py
ma_poc/fetch/proxy/: __init__.py  base.py  brightdata.py  escalation.py  none_provider.py  pricing.py  selector.py
ma_poc/models/: __init__.py  extraction_result.py  scrape_event.py  scrape_profile.py  unit_record.py
ma_poc/observability/: cost_ledger.py  dlq_controller.py  event_ledger.py  events.py  replay_store.py  slo_watcher.py
ma_poc/pms/: contracts.py  integration_helpers.py  resolver.py
ma_poc/pms/adapters/: __init__.py  base.py
ma_poc/reporting/: __init__.py  property_report.py  run_report.py  verdict.py
ma_poc/tests/discovery/: test_carry_forward.py  test_dlq.py  test_frontier.py  test_scheduler.py
ma_poc/tests/fetch/: test_rate_limiter.py  test_response_classifier.py  test_retry_policy.py  test_stealth.py
ma_poc/tests/observability/: test_cost_ledger.py  test_event_ledger.py
ma_poc/tests/validation/: test_cross_run_sanity.py  test_identity_fallback.py  test_schema_gate.py
ma_poc/validation/: __init__.py  contracts.py  cross_run_sanity.py  identity_fallback.py  orchestrator.py  schema_gate.py
tests/: test_cluster_learner.py  test_crawler.py  test_drift_detector.py  test_ember.py  test_observability.py  test_profile.py  test_reporting.py  test_skill.py  test_skill_memory.py  test_spark.py
(+65 files in other folders)
